TM-13955 - CSS change to fix line breaks in comment view.

--- a/web-app/tds/web-app/css/elements/component/single-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/single-comment-component.sass
@@ -5,6 +5,7 @@
     div
       margin-left: 13px
       margin-right: 13px
+      white-space: pre-wrap
     textarea
       min-width: 450px
       min-height: 150px
